# primitive_anything

./: .gitignore  config.yaml  config_loader.py  dataloader_3d.py  inference.py  loss_3d.py  michelangelo_point_cloud_encoder.py  point_cloud_config_example.py  point_transformer.py  primitive_anything_3d.py  primitive_anything_3d_backup.py  pyproject.toml  random_boxes_with_equivalents.json  random_boxes_with_equivalents_fixed.json  requirements.txt  segment_dataset.py  test_box.py  test_box2.py  train.py  trainer.py  training_config.yaml  training_config_generalization.yaml
process_data/: modify_box_coordinates.py  resort_boxes.py  restore_and_fix_coordinates.py  simple_rgbxyz.py
utils/: utils.py
utils/serialization/: default.py  hilbert.py
visualize/: visualize_new_position_boxes.py  visualize_rgbxyz_boxes.py
